// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar Project render project sidebar with root 1`] = `
<Fragment>
  <label
    className="section-title mt-1"
  >
    Project Flows
  </label>
  <hr
    className="mb-2 mt-4"
  />
  <label
    className="section-title mt-4"
  >
    Other Flows
  </label>
  <Connect(FlowButton)
    copyFlow={[Function]}
    deleteFlow={[Function]}
    flow={
      Object {
        "id": "1",
        "name": "ROOT",
        "sub_diagrams": Array [],
      }
    }
    key="1"
  />
</Fragment>
`;

exports[`SideBar Project render project with sub diagrams 1`] = `
<Fragment>
  <label
    className="section-title mt-1"
  >
    Project Flows
  </label>
  <hr
    className="mb-2 mt-4"
  />
  <label
    className="section-title mt-4"
  >
    Other Flows
  </label>
  <Connect(FlowButton)
    copyFlow={[Function]}
    deleteFlow={[Function]}
    flow={
      Object {
        "id": "1",
        "name": "ROOT",
        "sub_diagrams": Array [
          "2",
        ],
      }
    }
    key="1"
  />
  <Connect(FlowButton)
    copyFlow={[Function]}
    deleteFlow={[Function]}
    flow={
      Object {
        "id": "2",
        "name": "TEST",
        "sub_diagrams": Array [],
      }
    }
    key="2"
  />
</Fragment>
`;
